// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Location Component should render correctly 1`] = `
<DataListItem
  aria-labelledby="location-10"
  className=""
  id=""
  isExpanded={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <DataListItemRow>
    <DataListCell
      isFilled={true}
    >
      <Tooltip
        content="x"
      >
        <span
          id="location-10"
        >
          x
        </span>
      </Tooltip>
    </DataListCell>
    <DataListCell
      isFilled={false}
    >
      <Button
        isDisabled={false}
        onClick={[Function]}
        type="button"
        variant="link"
      >
        <TimesIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </Button>
    </DataListCell>
  </DataListItemRow>
</DataListItem>
`;

exports[`Location Component should render correctly when description is missing 1`] = `
<DataListItem
  aria-labelledby="location-11"
  className=""
  id=""
  isExpanded={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <DataListItemRow>
    <DataListCell
      isFilled={true}
    >
      <span
        id="location-11"
      >
        Location 11
      </span>
    </DataListCell>
    <DataListCell
      isFilled={false}
    >
      <Button
        isDisabled={false}
        onClick={[Function]}
        type="button"
        variant="link"
      >
        <TimesIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />
      </Button>
    </DataListCell>
  </DataListItemRow>
</DataListItem>
`;
